<resources>
    <string name="app_name">HaVagas</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="telefone_celular">Telefone celular?</string>
    <string name="telefone">Telefone</string>
    <string name="comercial">Comercial</string>
    <string name="resid_ncial">Residêncial</string>
    <string name="telefoneFixo">Telefone</string>
    <string name="e_mail">E-mail</string>
    <string name="name">Name</string>
    <string name="limpar">Limpar</string>
    <string name="salvar">Salvar</string>

    <array name="escolaridade">
        <item>Ensino Fundamental</item>
        <item>Ensino Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </array>
</resources>